fix skill display on mobile & animations

--- a/src/components/Skills/Skill/Skill.module.css
+++ b/src/components/Skills/Skill/Skill.module.css
@@ -1,9 +1,8 @@
 .skill {
     border: 2px solid #E7E7E7;
     border-radius: 5px;
-    max-width: 370px;
+    /*max-width: 500px;*/
     padding: 20px;
-    flex-grow: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -32,16 +31,4 @@
     text-align: justify;
     line-height: 1.4;
     cursor: default;
-}
-
-@media screen and (max-width: 1170px) {
-    .skill {
-        max-width: calc(50% - 15px);
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .skill {
-        max-width: 100%;
-    }
 }
